apps/base/media/jellystat/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat-db
  namespace: media
  labels:
    app: jellystat-db
    app.kubernetes.io/name: jellystat-db
spec:
  selector:
    app: jellystat-db
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: postgres
  type: ClusterIP
