apps/base/media/jellystat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - jellystat.sarma.love
      secretName: sarma-wildcard-tls
  rules:
    - host: jellystat.sarma.love
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellystat
                port:
                  number: 3000
